Fix logout link alignment and user menu styling

--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -58,7 +58,7 @@ i.fa.fa-cloud-upload {
   width: 100px;
   height: 100px;
   background-color: white;
-  border: 1px solid darkgrey;
+  border: 1px solid #D9D9D9;
 }
 
 .user-menu-modal:after, .user-menu-modal:before {
@@ -107,4 +107,8 @@ i.fa.fa-cloud-upload {
   a:hover {
     color: #a3a4a3;
   }
+}
+
+.logout-container {
+  height: 25px;
 }
